// Copyright 2022-2024 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// protocol buffers documentation: https://developers.google.com/protocol-buffers/docs/proto3
syntax = "proto3";
package attack_mitigator;

import "context.proto";

service AttackMitigator {
  rpc NotifyAttack (AttackDescription) returns (AttackResponse) {}
}

message AttackDescription {
  context.Uuid cs_id = 1;
  int32 attack_id = 2;
  float confidence = 3;
  string attack_description = 4;
}

message AttackResponse {
  context.Uuid cs_id = 1;
  int32 attack_id = 2;
  string attack_description = 3;
  int32 response_strategy_id = 4;
  string response_strategy_description = 5;
}
